--- a/src/app/components/ranking/ranking.component.html
+++ b/src/app/components/ranking/ranking.component.html
@@ -78,7 +78,7 @@
               <i class="fas fa-times"></i>
             </button>
           </div>
-          <p>Preciona la cacion para ver los detallas </p>
+          <p class="text-muted">Preciona la cacion para ver los detallas </p>
         </div>
         <div class="col-md-6">
           <div class="d-flex flex-wrap gap-2 justify-content-md-end">
@@ -183,7 +183,8 @@
           <h5 class="modal-title">
             <i class="fas fa-info-circle me-2"></i>Detalles de la Canción
           </h5>
-          <button type="button" class="btn-close" (click)="onCloseDetails()"></button>
+          <button type="button" class="btn btn-primary w-100 mb-2" (click)="onCloseDetails()"> 
+            Cerrar </button>
         </div>
         <div class="modal-body card-body">
           <div class="row">
