--- a/src/app/components/ranking/ranking.component.html
+++ b/src/app/components/ranking/ranking.component.html
@@ -1,4 +1,10 @@
 <div class="ranking-container fade-in">
+  <!-- Mensajes de estado -->
+  <div class="message-container">
+    <div class="success-message" *ngIf="voteMessage">
+      {{ voteMessage }}
+    </div>
+  </div>
   <div class="header-section">
     <h1 class="gradient-text">
       <i class="fas fa-trophy me-2"></i>Ranking Histórico
@@ -158,11 +164,6 @@
             <i class="fas fa-spinner fa-spin me-1" *ngIf="isVoting"></i>
             Votar
           </button>
-          <!-- Mensajes de estado -->
-          <div *ngIf="voteMessage" class="alert alert-info alert-dismissible fade show" role="alert">
-            {{ voteMessage }}
-            <button type="button" class="btn-close" (click)="voteMessage = ''"></button>
-          </div>
         </div>
       </div>
     </div>
@@ -186,11 +187,6 @@
           </h5>
           <button type="button" class="btn btn-primary w-100 mb-2" (click)="onCloseDetails()">
             Cerrar </button>
-          <!-- Mensajes de estado -->
-          <div *ngIf="voteMessage" class="alert alert-info alert-dismissible fade show" role="alert">
-            {{ voteMessage }}
-            <button type="button" class="btn-close" (click)="voteMessage = ''"></button>
-          </div>
         </div>
         <div class="modal-body card-body">
           <div class="row">
