--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -182,3 +182,10 @@
   from { opacity: 0; transform: translateY(10px); }
   to { opacity: 1; transform: translateY(0); }
 }
+
+.voting-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 1.5rem 0;
+}
